@@ -39,6 +39,7 @@
   IBOutlet id alarmPreferences;
   IBOutlet id alarmEnabled;
   IBOutlet id alarmBackendPopUp;
+  IBOutlet id switchDayWeekAxis;
   StoreManager *_sm;
 }
 
@@ -61,6 +62,7 @@
 - (void)toggleTooltip:(id)sender;
 - (void)toggleShowDate:(id)sender;
 - (void)toggleShowTime:(id)sender;
+- (void)toggleSwitchAxis:(id)sender;
 - (void)toggleAlarms:(id)sender;
 - (void)selectAlarmBackend:(id)sender;
 @end
